--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "lodash": "4.17.21",
+    "morgan": "~1.9.1",
+    "node-sass": "4.14.1",
+    "react-bootstrap": "1.5.2",
+    "react-router-dom": "5.2.0",
+    "uuid": "8.3.2"
   }
 }
